# cgrv-opt

./: 0_intermediate_before_affine.mlir  CMakeLists.txt  README.md  gitpush.sh
build_tools/: build_cgraopt.sh  build_llvm.sh  gitpush.sh
experiment/FloatKernel/: 0_intermediate_before_affine.mlir  1_kernel.mlir  3_forward_llvm copy.mlir  Linear_TORCH.mlir  forward.ll  main.c
experiment/FloatKernel/1_kernels_llvmmlir/: forward_kernel_1_llvm.mlir
experiment/ResnetSingleBLock/: 0_all_Affine.mlir  1_kernel.mlir  before_1_kernel.mlir  main.c  script
experiment/scripts/: 4_get_all_asms.sh  5_compile_and_link.sh
experiments/: cgra-opt-help.txt  compile.sh  compileLinear.sh  mlir-opt-help.txt  run_bash  soda-opt-help.txt
experiments/ConvModel/: 0_kernel_affine_to_llvm.sh  1_kernel_llvm_ir.sh  2_kernel_dfgs.sh  affine_soda.mlir  all_affine.mlir  compile.sh  conv_soda.mlir  fusion.mlir  generic_soda.mlir  host.mlir  main_kernel_interface.xml  main_kernel_test.xml  only_conv.mlir  only_conv_affine.mlir  scf_loop.mlir  temp.mlir
experiments/ConvTiling/: .conv.dot  0_intermediate_before_unroll.mlir  0_myconv.mlir  0_myconv_ee.mlir  12_kernel_0_after_simplifyCtrlLogic.dot  13_kernel_0_after_removeRedundantNodes.dot  1_kernel.mlir  1_kernel_0_after_addMemDepEdges.dot  2_kernel_mem_opt.mlir  3_host.mlir  3_kernel_0_after_insertCtrlNotNodes.dot  4_kernel_0_after_createCtrlOrTree.dot  5_kernel_0_after_handleGEPNodes.dot  6_kernel_0_after_affineAnalyze.dot  7_kernel_0_after_handlePHINodes.dot  8_kernel_0_after_handleSelectNodes.dot  9_kernel_0_after_handleAffineLSNodes.dot  Ori_0.dot  affine.dot  conv.c  conv_kernel.json  conv_kernel_cfg.dot  conv_kernel_init_cdfg.dot  hierarchyDOT_0.dot  kernel.c  kernel.ll  kernel_cdfg.ll  kernel_gvn.ll  myconv.c  myconv_simplified.c  myconv_simplified.ll  myconv_simplified_cdfg.ll  myconv_simplified_gvn.ll  myconv_simplified_onlykernel.ll  script
experiments/Demo1/: 0_all_Affine.mlir  0_intermediate_before_affine.mlir  1_kernel.mlir  2_host.mlir  3_forward_llvm.mlir  3_intermediate_forward_llvm.mlir  LinalgTensorArith.mlir  Linear_TORCH.mlir  Linear_TOSA.mlir  OnlyLinear.py  forward.bc  forward.ll  main.c
experiments/Demo1 copy/: 0_all_Affine.mlir  0_intermediate_before_affine.mlir  1_kernel.mlir  2_host.mlir  3_forward_llvm.mlir  3_intermediate_forward_llvm.mlir  LinalgTensorArith.mlir  Linear_TORCH.mlir  OnlyLinear.py  forward.bc  forward.ll  main.c
experiments/Demo2/: 0_all_Affine.mlir  0_intermediate_before_affine.mlir  1_kernel.mlir  2_host.mlir  LinalgTensorArith.mlir
experiments/DesignSpace/: forward_1_1_1_1_1_1_1_1_1_1.mlir  forward_1_1_1_1_1_3_1_1_1_1.mlir  forward_1_3_1_1_1_1_1_1_1_1.mlir  forward_1_3_1_1_1_3_1_1_1_1.mlir
experiments/EasyMLIRCall/: 0_all_Affine.mlir  0_all_affine.mlir  1_kernel.mlir  2_host.mlir  3_forward_llvm.mlir  3_intermediate_forward_llvm.mlir  fence.mlir  fence_ll.mlir  forward.bc  forward.ll  lowering_script.sh  main.c  try.ll
experiments/FloatKernel/: 0_all_Affine.mlir  1_kernel.mlir  2_host.mlir  3_forward_llvm.mlir  3_intermediate_forward_llvm.mlir  LinalgTensorArith.mlir  Linear_TOSA.mlir  OnlyLinear.py  affine.dot  affine2.dot  forward.bc  forward.ll  main.c
experiments/IntKernel/: 0_all_Affine.mlir  0_intermediate_before_affine.mlir  1_kernel.mlir  2_host.mlir  3_forward_llvm.mlir  3_intermediate_forward_llvm.mlir  Linear_TORCH.mlir  forward.bc  forward.ll  forward_kernel_0.mlir.bck  main.c
experiments/LinearModel/: 0_all_Affine.mlir  0_intermediate_before_affine.mlir  1_kernel.mlir  1_kernel_llvm_ir.sh  2_host.mlir  3_dfgs_mapping.sh  3_forward_llvm.mlir  3_intermediate_forward_llvm.mlir  5_compile_and_link.sh  LinalgTensorArith_empty2alloc.mlir  Linear_TOSA.mlir  OnlyLinear.py  compileLinear.sh  easy_llvm.mlir  forward.bc  forward.ll  main.c  main.s
experiments/Norearrange/: 2_intermediate_NN.mlir  Norearrange_LINALG.mlir  Norearrange_TOSA.mlir  compile.sh  run_bash
experiments/Resnet/: 0_intermediate_before_affine.mlir  TOSA_test.mlir  torchscript_resnet18_all_output_types.py
experiments/ResnetSingleBLock/: 0_all_Affine.mlir  0_intermediate_before_affine.mlir  0_intermediate_before_affine_2.mlir  1_kernel.mlir  1_kernel_adjust.mlir  2_after_kernel_lower.mlir  2_before_kernel_lower.mlir  2_host.mlir  2_host_before_lower.mlir  2_host_imexplicit.mlir  2_host_implicit.mlir  2_info.mlir  2_intermediate_before_host.mlir  3_forward_llvm.mlir  3_forward_llvm_bck.mlir  3_forward_llvm_test.mlir  3_intermediate_forward_llvm.mlir  3_intermediate_forward_llvm_test.mlir  LINALG_TENSOR.mlir  forward.bc  forward.ll  script  test.mlir
experiments/gemm/: 0_gemm_change.mlir  1_gemm_kernel.mlir  1_gemm_kernel_change.mlir  2_gemm_kernel_noOutline.mlir  2_gemm_outlined.mlir  3_gemm_intermediate.mlir  final_gemm_kernel.mlir  gemm.c  gemm.h  gemm_soda_launch.mlir  intermediate_gemm_kernel.mlir  run_bash
experiments/gemm_new/: 0_gemm.mlir  2_gemm_outlined.mlir  2_gemm_outlined_funcall.mlir  3_gemm_onlyhost.mlir  3_gemm_outlined_funcall_llvm.mlir  4_gemm_host_llvm.mlir  gemm_modified.c  gemm_outlined_funcall.ll  run_bash  temp.mlir
experiments/helpfiles/: help-cgra-opt.txt  help-clang.txt  help-gcc.txt  help-llc.txt  help-mlir-opt-18.txt  help-opt.txt  help-torchmlir-opt.txt  scalehls-opt-help.txt
experiments/kernels/: forward_kernel_1.mlir  forward_kernel_2.mlir
experiments/scripts/: 0_kernel_affine_to_llvm.sh  2_kernel_dfgs.sh  3_dfgs_mapping.sh  compileLinear.sh
experiments/three_mm_32/: 1_mm_kernel.mlir  2_mm_kernel_footprint.mlir  3_mm_kernel_outlined.mlir  run_bash  try.mlir
include/RAAA/: CMakeLists.txt
include/RAAA/Dialect/ComplexOP/Transforms/: CMakeLists.txt  MulAccum.cpp  Passes.h  Passes.td
lib/: CMakeLists.txt
lib/DFG/: CMakeLists.txt
lib/DFG/src/: CMakeLists.txt  llvm_cdfg.cpp  llvm_cdfg_node.cpp  mlir_cdfg.cpp  mlir_cdfg_node.cpp
lib/Dialect/: CMakeLists.txt
lib/Misc/: CMakeLists.txt  MiscPasses.cpp
scripts/: 2_kernel_dfgs.sh
tools/: CMakeLists.txt
tools/cgra-opt/: CMakeLists.txt  cgra-opt.cpp
tools/soda-opt/: CMakeLists.txt  soda-opt.cpp
(+979 files in other folders)
